fix css issue where view was too tall on electron v6.0.0

--- a/src/css/mainwindow.css
+++ b/src/css/mainwindow.css
@@ -1,3 +1,7 @@
+html, body {
+  height: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
